# HWSF_Final_Monolith

./: .gitignore  main
.devcontainer/: Dockerfile  cmake_.sh  devcontainer.json
ControlerArduino/: platformio.ini  scratch
ControlerArduino/src/: main.cpp
RobotRunCode/: platformio.ini  scratch
RobotRunCode/src/: main.cpp
Shared/Include/: RobotIO.h  WiskerData.h
ros2_ws/src/robot_control/: CMakeLists.txt  package.xml
ros2_ws/src/robot_control/src/: compass_control_node.cpp  hello_world.cpp  robot_control_node.cpp
ros2_ws/src/robot_driver/: CMakeLists.txt  package.xml
ros2_ws/src/robot_driver/src/: robot_bridge.cpp
ros2_ws/src/robot_interfaces/: CMakeLists.txt  package.xml
ros2_ws/src/robot_interfaces/msg/: RobotControl.msg  WiskerData.msg
scratch/: main.cpp  tcp.cpp
